syntax = "proto3";

option go_package = "./v1";

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc AuthToken (AuthTokenRequest) returns (AuthTokenResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string acessToken = 1;
}

message AuthTokenRequest {
  string acessToken = 1;
}

message AuthTokenResponse {
  int64 id = 1;
  bool authorize= 2;
}